# Proyecto-El-Valler-Iridiano

./: Albo.cpp  Albo.h  CMakeLists.txt  Centella.cpp  Centella.h  Criatura.cpp  Criatura.h  Entorno.cpp  Entorno.h  Mapa.cpp  Mapa.h  Metamorfita.cpp  Metamorfita.h  README.md  Raiz.cpp  Raiz.h  UML.md  calificaciones.md  main.cpp  todo_en_uno.cpp  valleIridiano.json
