cmake_minimum_required(VERSION 3.30)
project(proyectofinalPOO)

set(CMAKE_CXX_STANDARD 20)

add_executable(proyectofinalPOO main.cpp
        Entorno.cpp
        Entorno.h
        Criatura.cpp
        Criatura.h
        Raiz.cpp
        Raiz.h
        Centella.cpp
        Centella.h
        Metamorfita.cpp
        Metamorfita.h
        Albo.cpp
        Albo.h
        Mapa.cpp
        Mapa.h)
